# Family_Calendar

./: .gitignore  Agents.md  Dockerfile  README.md  alembic.ini  pyproject.toml  vercel.json
app/: database.py  main.py  models.py  schemas.py  settings.py
app/routers/: __init__.py  bookings.py  health.py
backend/app/: main.py
backend/tests/: test_health.py
frontend-htmx/: index.html  index_approval.html
frontend-htmx/static/: output.css  styles.css
migrations/: env.py
public/: index.html  index_approval.html
public/static/: styles.css
tests/: test_bookings_approvals.py  test_health.py  test_settings.py
