[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[project]
name = "bookly"
version = "0.1.0"
description = "FastAPI backend with HTMX frontend for booking management"
authors = [{ name = "Bookly Team" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "sqlalchemy>=2.0.29",
  "alembic>=1.13.2",
  "psycopg[binary]>=3.1.19",
  "asyncpg>=0.29.0",
  "pydantic[email]>=2.7.0",
  "pydantic-settings>=2.2.1",
  "python-dotenv>=1.0.1",
]

[project.scripts]
app = "app.index:app"

[project.optional-dependencies]
dev = [
  "uvicorn[standard]>=0.30.0",
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.6",
  "httpx>=0.27.0",
  "ruff>=0.5.0",
  "black>=24.4.2",
  "mypy>=1.10.0",
]

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "S", "ASYNC"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
check_untyped_defs = true
ignore_missing_imports = false
strict_optional = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


